--- a/src/DevStoreApp/index.html
+++ b/src/DevStoreApp/index.html
@@ -1,98 +1,69 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" ng-app>
+<html>
 <head>
-    <title></title>
-</head>
-<body>
+    <meta charset="UTF-8">
+    <title>DevStore - Development Stuffs</title>
 
-    <div ng-controller="MyController">
-        <h1>{{ title }}</h1>
-        <ul ng-repeat="product in products">
-            <li>
-                <a href="javascript:void(0)" ng-click="selectProduct(product.id)">{{ product.title }}</a> -
-                <a href="javascript:void(0)" ng-click="deleteProduct(product.id)">[X]</a>
-            </li>
-        </ul>
-        <hr />
-        <a href="javascript:void(0)" ng-click="newProduct()">Adicionar Novo Produto</a>
-        <hr />
-        <form name="form1" ng-submit="submit()">
-            Título: <input name="price" ng-model="product.title" type="text">
-            Preço: <input name="title" ng-model="product.price" type="text">
-            <input type="submit" value="Salvar">
-        </form>
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+
+    <link href="content/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="content/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="content/css/ionicons.min.css" rel="stylesheet" />
+    <link href="content/css/AdminLTE.css" rel="stylesheet" />
+    
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body class="skin-black">
+    <header class="header">
+        <a href="#/" class="logo">DevStore</a>
+    </header>
+
+    <div class="wrapper row-offcanvas row-offcanvas-left">
+        <aside class="left-side sidebar-offcanvas">
+            <section class="sidebar">                
+                <ul class="sidebar-menu">
+                    <li>
+                        <a href="#/">
+                            <i class="fa fa-dashboard"></i> <span>Página Inicial</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#/categorias">
+                            <i class="fa fa-list-ul"></i> <span>Categorias</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#/produtos">
+                            <i class="fa fa-shopping-cart"></i> <span>Produtos</span>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+        </aside>
+        
+        <aside class="right-side">
+            <section class="content-header">
+                <h1>Página Inicial <small>DevStore</small></h1>
+                <ol class="breadcrumb">
+                    <li class="active">Página Inicial</li>
+                </ol>
+            </section>
+
+            <section class="content">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3>Conteúdo</h3>
+                    </div>
+                </div>
+            </section>
+        </aside>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.min.js"></script>
-    <script>
-        function MyController($scope, $http) {
-            $scope.title = "Testando";
-            $scope.products = [];
-            $scope.product = {
-                id: 0,
-                title: "",
-                price: 0,
-                acquireDate: "",
-                isActive: true,
-                categoryId: 1
-            };
-
-            $http.get('http://devstore-api.azurewebsites.net/api/v1/public/products')
-                .success(function (data, status, headers, config) {
-                    angular.forEach(data, function (product) {
-                        $scope.products.push(product);
-                    });
-                });
-
-            $scope.submit = function () {
-                var data = $scope.product;
-
-                if (data.id == 0) {
-                    $http.post('http://devstore-api.azurewebsites.net/api/v1/public/products', data)
-                    .success(function (result) {
-                        console.log("Salvou");
-                        $scope.products.push(result);
-                    });
-                } else {
-                    $http.put('http://devstore-api.azurewebsites.net/api/v1/public/products', data)
-                    .success(function () {
-                        console.log("Alterou");
-                    });
-                }
-            };
-
-            $scope.selectProduct = function (productId) {
-                angular.forEach($scope.products, function (product) {
-                    if (product.id == productId) {
-                        $scope.product = product;
-                    }
-                });
-            };
-
-            $scope.deleteProduct = function (productId) {
-                $http.delete('http://devstore-api.azurewebsites.net/api/v1/public/products?productId=' + productId)
-                    .success(function () {
-                        console.log("Excluiu");
-                        angular.forEach($scope.products, function (product) {
-                            if (product.id == productId) {
-                                var index = $scope.products.indexOf(product)
-                                $scope.products.splice(index, 1);
-                            }
-                        });
-                    });
-            };
-
-            $scope.newProduct = function () {
-                $scope.product = {
-                    id: 0,
-                    title: "",
-                    price: 0,
-                    acquireDate: "",
-                    isActive: true,
-                    categoryId: 1
-                };
-            }
-        }
-    </script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script src="content/js/bootstrap.min.js"></script>
+    <!--<script src="content/js/app.js"></script>-->
 </body>
 </html>
