--- a/src/DevStoreApp/index.html
+++ b/src/DevStoreApp/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
     <meta charset="UTF-8">
     <title>DevStore - Development Stuffs</title>
@@ -10,6 +10,8 @@
     <link href="content/css/font-awesome.min.css" rel="stylesheet" />
     <link href="content/css/ionicons.min.css" rel="stylesheet" />
     <link href="content/css/AdminLTE.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
+    <link href="content/css/datatables/dataTables.bootstrap.css" rel="stylesheet" />
     
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -19,13 +21,22 @@
 <body class="skin-black">
     <header class="header">
         <a href="#/" class="logo">DevStore</a>
+
+        <nav class="navbar navbar-static-top" role="navigation">
+            <a href="#" class="navbar-btn sidebar-toggle" data-toggle="offcanvas" role="button">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+        </nav>
     </header>
 
     <div class="wrapper row-offcanvas row-offcanvas-left">
         <aside class="left-side sidebar-offcanvas">
             <section class="sidebar">                
                 <ul class="sidebar-menu">
-                    <li>
+                    <li class="active">
                         <a href="#/">
                             <i class="fa fa-dashboard"></i> <span>Página Inicial</span>
                         </a>
@@ -40,30 +51,53 @@
                             <i class="fa fa-shopping-cart"></i> <span>Produtos</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="#/carrinho">
+                            <i class="fa fa-shopping-cart"></i> <span>Meu Carrinho</span>
+                            <small class="badge pull-right bg-red" ng-model="shoppingCartItems.legth"></small>
+                        </a>
+                    </li>                    
                 </ul>
             </section>
         </aside>
         
-        <aside class="right-side">
-            <section class="content-header">
-                <h1>Página Inicial <small>DevStore</small></h1>
-                <ol class="breadcrumb">
-                    <li class="active">Página Inicial</li>
-                </ol>
-            </section>
-
-            <section class="content">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h3>Conteúdo</h3>
-                    </div>
-                </div>
-            </section>
-        </aside>
+        <aside class="right-side" ng-view=""></aside>
     </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <script src="content/js/bootstrap.min.js"></script>
-    <!--<script src="content/js/app.js"></script>-->
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.0/js/toastr.min.js"></script>
+    <script src="content/js/app.js"></script>
+    <script src="content/js/datatables/jquery.dataTables.js"></script>
+    <script src="content/js/datatables/dataTables.bootstrap.js"></script>
+
+    <script src="http://code.angularjs.org/1.2.9/angular.min.js"></script>
+    <script src="http://code.angularjs.org/1.2.9/angular-route.min.js"></script>
+    <script src="http://code.angularjs.org/1.2.9/angular-animate.min.js"></script>
+
+    <script src="app/routes.js"></script>
+    <script src="app/controllers/HomeController.js"></script>
+    <script src="app/controllers/ProductController.js"></script>
+    <script src="app/controllers/CategoryController.js"></script>
+    <script src="app/controllers/ShoppingCartController.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            toastr.options = {
+                "closeButton": true,
+                "positionClass": "toast-bottom-right",
+                "showDuration": "300",
+                "hideDuration": "1000",
+                "timeOut": "5000",
+                "extendedTimeOut": "1000",
+                "showEasing": "swing",
+                "hideEasing": "linear",
+                "showMethod": "fadeIn",
+                "hideMethod": "fadeOut"
+            }
+
+            $(".data-table").dataTable();
+        });
+    </script>
 </body>
 </html>
