--- a/src/DevStoreApp/index.html
+++ b/src/DevStoreApp/index.html
@@ -11,8 +11,7 @@
     <link href="content/css/ionicons.min.css" rel="stylesheet" />
     <link href="content/css/AdminLTE.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
-    <link href="content/css/datatables/dataTables.bootstrap.css" rel="stylesheet" />
-    
+
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
@@ -34,11 +33,11 @@
 
     <div class="wrapper row-offcanvas row-offcanvas-left">
         <aside class="left-side sidebar-offcanvas">
-            <section class="sidebar">                
+            <section class="sidebar">
                 <ul class="sidebar-menu">
                     <li class="active">
                         <a href="#/">
-                            <i class="fa fa-dashboard"></i> <span>Página Inicial</span>
+                            <i class="fa fa-tag"></i> <span>Catálogo de Produtos</span>
                         </a>
                     </li>
                     <li>
@@ -48,7 +47,7 @@
                     </li>
                     <li>
                         <a href="#/produtos">
-                            <i class="fa fa-shopping-cart"></i> <span>Produtos</span>
+                            <i class="fa fa-barcode"></i> <span>Produtos</span>
                         </a>
                     </li>
                     <li>
@@ -56,11 +55,11 @@
                             <i class="fa fa-shopping-cart"></i> <span>Meu Carrinho</span>
                             <small class="badge pull-right bg-red" ng-model="shoppingCartItems.legth"></small>
                         </a>
-                    </li>                    
+                    </li>
                 </ul>
             </section>
         </aside>
-        
+
         <aside class="right-side" ng-view=""></aside>
     </div>
 
@@ -68,8 +67,6 @@
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.0/js/toastr.min.js"></script>
     <script src="content/js/app.js"></script>
-    <script src="content/js/datatables/jquery.dataTables.js"></script>
-    <script src="content/js/datatables/dataTables.bootstrap.js"></script>
 
     <script src="http://code.angularjs.org/1.2.9/angular.min.js"></script>
     <script src="http://code.angularjs.org/1.2.9/angular-route.min.js"></script>
@@ -95,8 +92,6 @@
                 "showMethod": "fadeIn",
                 "hideMethod": "fadeOut"
             }
-
-            $(".data-table").dataTable();
         });
     </script>
 </body>
